test/src/e2e_vm_tests/test_programs/should_fail/traits_with_call_paths/src/my_add.sw
library my_add;

pub trait MyAdd {
    fn my_add(self, other: Self) -> Self;
}
